2010-06-28  Roland McGrath  <roland@redhat.com>

	* libdwP.h (struct Dwarf_Lines_s): Change reloc member to int pointer.
	* dwarf_getsrclines.c (struct linelist): Add reloc/symndx/shndx members.
	(compare_lines): Sort by shndx before line.addr.
	(dwarf_getsrclines): Resolve relocatable addresses to a symndx and
	section-relative address.
	* dwarf_line_relocatable.c: Initialize symndx instead of valp.
	* dwarf_lineaddr.c: Use __libdw_relocate_shndx

	* relocate.c (__libdw_relocatable_getsym): New function.
	(__libdw_relocate_address, __libdw_relocate_offset): Call it.
	(__libdw_relocate_shndx): New function.
	* relocate.h: Declare them.

	* libdw.h (Dwarf_Relocatable): Use uint8_t for sec and form members.
	Add symndx member.
	* dwarf_relocatable_info.c (relocatable_form): Take new arg SYMNDX.
	If VALP is null, use SYMNDX instead of looking for a reloc.
	(dwarf_relocatable_info): Update caller.

2010-06-24  Roland McGrath  <roland@redhat.com>

	* encoded-value.h (encoded_value_size): Replace E_IDENT parameter
	with ADDRESS_SIZE.
	(read_encoded_value): Update caller.
	* fde.c (binary_search_fde): Likewise.
	* dwarf_next_cfi.c: Likewise.
	* cfi.h (struct dwarf_cie): New member address_size.
	(CFI_ADDRSIZE): New macro.
	* cie.c (intern_new_cie): Initialize and use CIE->address_size.
	(canonicalize_encoding): New function.
	(intern_new_cie): Call it, do both FDE and LSDA encodings.

2010-06-23  Roland McGrath  <roland@redhat.com>

	* cfi.c (dwarf_cfi_validate_fde): Function removed.
	* libdw.h: Remove it.
	* libdw.map: Likewise.

2010-06-23  Roland McGrath  <roland@redhat.com>

	* cfi.c (dwarf_cfi_frames): New function.
	* libdw.h: Declare it.

	* fde.c (__libdw_fde_by_offset): Take new argument NEXTOFF.
	If non-null, return -1 marker without error at end of section,
	skip CIEs, and store next offset.  Maintain fde_tailp and next.
	* cfi.h: Update decl.

	* cfi.h (struct dwarf_fde): New member next.
	(struct Dwarf_CFI_s): New members first_fde, fde_tailp.