@@ -679,6 +679,7 @@ INTDECL (dwarf_getarangeinfo)
 INTDECL (dwarf_getaranges)
 INTDECL (dwarf_getsrcfiles)
 INTDECL (dwarf_getsrclines)
+INTDECL (dwarf_getsrc_die)
 INTDECL (dwarf_hasattr)
 INTDECL (dwarf_haschildren)
 INTDECL (dwarf_haspc)
