@@ -1,4 +1,12 @@
-2010-06-28  Roland McGrath  <roland@redhat.com>
+2010-06-29  Roland McGrath  <roland@redhat.com>
+
+	* dwarf_getsrc_relocatable.c: New file.
+	* Makefile.am (libdw_a_SOURCES): Add it.
+	* libdw.h: Declare it.
+	* libdw.map (ELFUTILS_0.149): Add it.
+
+	* dwarf_getsrc_die.c: Add INTDEF.
+	* libdwP.h: Add INTDECL.
 
 	* libdwP.h (struct Dwarf_Lines_s): Change reloc member to int pointer.
 	* dwarf_getsrclines.c (struct linelist): Add reloc/symndx/shndx members.
@@ -15,9 +23,9 @@
 
 	* libdw.h (Dwarf_Relocatable): Use uint8_t for sec and form members.
 	Add symndx member.
-	* dwarf_relocatable_info.c (relocatable_form): Take new arg SYMNDX.
-	If VALP is null, use SYMNDX instead of looking for a reloc.
-	(dwarf_relocatable_info): Update caller.
+	* dwarf_relocatable_info.c: Update RELOC with non-null valp to
+	one with a null valp, symndx set, and adjust section-relative.
+	If RELOC->valp is already null, use cached symndx.
 
 2010-06-24  Roland McGrath  <roland@redhat.com>
 
